<resources>
    <string name="app_name">IF1-10118005-Latihan2-Bloodshare</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="login">LOGIN</string>
    <string name="connect">Connect With Facebook</string>
    <string name="tidakpunyaakun">"Doesn't Have Account?"</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone">Phone Number</string>
    <string name="retypepass">Retype Password</string>
    <string name="personal">Personal</string>
    <string name="organization">Organization</string>
    <string name="home">Home Address</string>
    <string name="location">Default Location</string>
    <string name="agree">Agree with Terms and Conditions</string>
    <string name="almost">Almost There</string>
    <string name="thankyou">Thank you for registering with us. One more step, you need to check your email to active your account</string>
    <string name="verify">VERIFY</string>
    <string name="veraccount">Verify your Account</string>
    <string name="vercode">We have send verification code to your email</string>
    <string name="send">SEND</string>
    <string name="tidakpunyacode">"Doesn't get the code?"</string>
    <string name="resend">Resend</string>
    <string name="enterver">enter verification code here</string>
    <string name="rico">Rycho Rantung</string>
    <string name="blood">Blood Type: B</string>
    <string name="give">BLOOD GIVE</string>
    <string name="receive">BLOOD RECEIVED</string>
    <string name="thanks">THANKS</string>
    <string name="search">Search Donor</string>
    <string name="need">Blood Needed</string>
    <string name="message">Message</string>
    <string name="donor">Donor History</string>
    <string name="searchdonor">Search donor near you</string>
    <string name="bloodneeded">4 Users need blood</string>
    <string name="newmess">5 New Messages</string>
    <string name="donorhistory">5 Gives, 2 Received</string>
</resources>