<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:background="@color/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:background="@drawable/ic_header">
        <ImageView
            android:id="@+id/btn_kembali"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/ic_header_back"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:paddingTop="4dp"
            android:textSize="18sp"
            android:layout_marginStart="25dp"
            android:textColor="@color/background"
            android:text="@string/register"/>
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:orientation="vertical">
    <EditText
        android:id="@+id/edit_reg_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/username"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edit_reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:hint="@string/phone"
        android:inputType="phone"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="40dp"
        android:orientation="horizontal"
        android:gravity="center">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:buttonTint="@color/lightblue"
            android:text="@string/male"
            android:layout_weight="5"
            android:textColor="@color/fontdesc"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="5"
            android:buttonTint="@color/lightblue"
            android:text="@string/female"
            android:textColor="@color/fontdesc"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="3dp"
        android:gravity="center">

        <Spinner
            android:id="@+id/list_blood"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:entries="@array/list_bloodtype"
            android:paddingLeft="10dp"
            android:paddingRight="80dp" />

        <Spinner
            android:id="@+id/list_rhesus"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:entries="@array/list_rhesus"
            android:paddingLeft="5dp"
            android:paddingRight="60dp" />
    </LinearLayout>
    <EditText
        android:id="@+id/edit_reg_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="1dp"
        android:hint="@string/pass"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/edit_reg_retypepass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="1dp"
        android:hint="@string/retypepass"
        android:inputType="textPassword"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:orientation="horizontal"
        android:gravity="center">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:buttonTint="@color/lightblue"
            android:text="@string/personal"
            android:layout_weight="5"
            android:textColor="@color/fontdesc"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="5"
            android:buttonTint="@color/lightblue"
            android:text="@string/organization"
            android:textColor="@color/fontdesc"/>
    </RadioGroup>

    <Spinner
        android:id="@+id/list_job"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        android:entries="@array/list_job"
        android:paddingLeft="40dp"
        android:paddingRight="20dp"/>

    <EditText
        android:id="@+id/edit_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="30dp"
        android:hint="@string/home"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="30dp"
        android:drawableEnd="@drawable/ic_blood_needed_location"
        android:hint="@string/location"
        android:inputType="text" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="24dp"
        android:text="@string/agree"
        android:buttonTint="@color/lightblue"
        android:textColor="@color/fontdesc"/>

    <Button
        android:id="@+id/btn_reg_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:text="@string/register"
        android:background="@drawable/custombutton_lightblue"
        android:textColor="@color/lightblue"
        android:onClick="OnClickRegister"/>
</LinearLayout>
</LinearLayout>
