<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlmostThereActivity"
    android:orientation="vertical"
    android:background="@color/lightblue">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            android:text="@string/veraccount"
            android:textColor="@color/background"
            android:textSize="35sp" />

        <TextView
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/vercode"
            android:textSize="16sp"
            android:textColor="@color/background" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/enterver"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"/>
        <Button
            android:id="@+id/btn_verfiy"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/send"
            android:background="@drawable/custombutton"
            android:textColor="@color/white"
            android:onClick="OnClickSend"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/tidakpunyacode"
            android:textSize="16sp"
            android:paddingLeft="70dp"
            android:textColor="@color/background"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/resend"
            android:textSize="16sp"
            android:textColor="@color/background"
            android:textStyle="bold"
            android:padding="5dp"/>
    </LinearLayout>
</LinearLayout>