<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlmostThereActivity"
    android:orientation="vertical"
    android:background="@color/lightblue">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">
    <TextView
        android:layout_width="292dp"
        android:layout_height="78dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:text="@string/almost"
        android:textColor="@color/background"
        android:textSize="45sp" />

    <TextView
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/thankyou"
        android:textSize="16sp"
        android:textColor="@color/background" />

    <Button
        android:id="@+id/btn_verfiy"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:text="@string/verify"
        android:background="@drawable/custombutton"
        android:textColor="@color/white"
        android:onClick="OnClickVerify"/>

    </LinearLayout>
</LinearLayout>